--- a/Cargo.toml
+++ b/Cargo.toml
@@ -72,3 +72,5 @@ sp-storage = { version = "21.0.0", default-features = false }
 sp-transaction-pool = { version = "34.0.0", default-features = false }
 sp-version = { version = "37.0.0", default-features = false }
 substrate-wasm-builder = { version = "24.0.0", default-features = false }
+wasmi = { version = "0.38.0", default-features = false }
+log = { version = "0.4.22", default-features = false }
