--- a/pallets/template/Cargo.toml
+++ b/pallets/template/Cargo.toml
@@ -22,6 +22,9 @@ scale-info = { features = [
 frame-benchmarking = { optional = true, workspace = true }
 frame-support.workspace = true
 frame-system.workspace = true
+wasmi.workspace = true
+sp-runtime = { default-features = false, workspace = true }
+log = { defalut-features = false, workspace = true }
 
 [dev-dependencies]
 sp-core = { default-features = true, workspace = true }
